# intellisphere

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  dyson-implementation-guide.md
.github/workflows/: ci.yaml
cli/: go.mod
cli/cmd/intellisphere/: health.go  main.go  tool_create.go  tool_test.go  tool_validate.go
core/: Dockerfile  go.mod  go.sum
core/cmd/core/: main.go
core/internal/adapter/: adapter.go  anthropic.go  mock.go  mock_test.go
core/internal/server/: grpc.go  grpc_test.go
core/proto/intellisphere/v1/: intellisphere.pb.go  intellisphere_grpc.pb.go
examples/hello-world/: README.md
proto/intellisphere/v1/: intellisphere.proto
satellite/: package.json  tsconfig.json
satellite/src/: guardrails.ts  index.ts  satellite.ts  transport.ts  types.ts
sdk/: package.json
sdk/src/: define-edge-tool.ts  define-tool.ts  index.ts  manifest.ts  types.ts
sphere/: Cargo.toml  Dockerfile  build.rs
sphere/config/: dyson.config.dev.yaml  dyson.config.yaml
sphere/config/policies/: default.yaml
sphere/src/: errors.rs  main.rs
sphere/src/api/: chat.rs  health.rs  mod.rs
sphere/src/audit/: emitter.rs  event.rs  mod.rs  sink.rs
sphere/src/auth/: api_key.rs  identity.rs  jwt.rs  mod.rs  strategy.rs
sphere/src/config/: loader.rs  mod.rs
sphere/src/core_client/: grpc.rs  mod.rs
sphere/src/ingress/: gate.rs  mod.rs
sphere/src/pipeline/: chain.rs  context.rs  mod.rs
sphere/src/pipeline/inbound/: content_classifier.rs  conversation_boundary.rs  input_sanitization.rs  mod.rs  pii_redaction.rs  token_budget.rs  topic_guardrail.rs  traits.rs
sphere/src/pipeline/outbound/: hallucination_flag.rs  injection_echo.rs  mod.rs  pii_leak_detection.rs  response_classifier.rs  result_size.rs  traits.rs
sphere/src/policy/: engine.rs  loader.rs  mod.rs  types.rs
sphere/src/proto/: intellisphere.v1.rs  mod.rs
sphere/src/rate_limit/: limiter.rs  mod.rs  token_bucket.rs
sphere/src/satellite/: adjudicator.rs  mod.rs  session.rs  trust_budget.rs  ws.rs
sphere/src/tools/: executor.rs  interceptor.rs  mod.rs  registry.rs  scoped_client.rs
