[package]
name = "intellisphere-sphere"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "IntelliSphere Sphere — security boundary and orchestration layer for Agentic AI"
license = "BSL-1.1"
repository = "https://github.com/thehammer/intellisphere"

[dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC
tonic = { version = "0.14", features = ["tls-ring", "transport", "channel"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

# HTTP server (external API + WebSocket)
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }
hyper = { version = "1.8", features = ["full"] }

# HTTP client (ScopedHttpClient for tool execution)
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"

# JSON Schema validation
jsonschema = "0.45"

# Regex (v1 filters)
regex = "1.12"

# URL parsing (ScopedHttpClient domain validation)
url = "2.5"

# Tracing / audit
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["tonic"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID (request/session IDs)
uuid = { version = "1.22", features = ["v4"] }

# JWT validation
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Config
figment = { version = "0.10", features = ["yaml", "env"] }

# Crypto (hashing, HMAC for Satellite session tokens)
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
tracing-appender = "0.2"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tower-test = "0.4"
tempfile = "3.27"
assert_matches = "1.5"
